# sunspot

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.kiro/specs/mvp/: design.md  requirements.md  tasks.md
.kiro/steering/: code-guidelines.md
app/: __init__.py
app/config/: __init__.py  settings.py
app/domain/: __init__.py  diagnostics.py
app/services/: __init__.py  geolocation.py  solar.py
app/ui/: __init__.py  i18n.py  main_page.py
app/utils/: angle.py  exceptions.py  season.py
